[gd_scene load_steps=2 format=3 uid="uid://dm5v8f6r7p2m7"]

[ext_resource type="Script" path="res://scripts/ui/CharacterSelect.gd" id="1_char_script"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_char_script")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.07, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "SELECT YOUR MEMORY"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Archivist" type="VBoxContainer" parent="VBox/HBox"]
layout_mode = 2

[node name="ArchivistBtn" type="Button" parent="VBox/HBox/Archivist"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
text = "ðŸ“œ
ARCHIVIST"

[node name="Desc" type="Label" parent="VBox/HBox/Archivist"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Passively remembers the last 4 cards flipped."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Berserker" type="VBoxContainer" parent="VBox/HBox"]
layout_mode = 2

[node name="BerserkerBtn" type="Button" parent="VBox/HBox/Berserker"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
text = "ðŸª“
BERSERKER"

[node name="Desc" type="Label" parent="VBox/HBox/Berserker"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Matches 'crack' adjacent cards, partially revealing them."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Illusionist" type="VBoxContainer" parent="VBox/HBox"]
layout_mode = 2

[node name="IllusionistBtn" type="Button" parent="VBox/HBox/Illusionist"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
text = "ðŸŽ­
ILLUSIONIST"

[node name="Desc" type="Label" parent="VBox/HBox/Illusionist"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Swaps card positions to confuse and conquer."
horizontal_alignment = 1
autowrap_mode = 3

[node name="BackBtn" type="Button" parent="VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "BACK"